examples/test/testpolicy5784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5784
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key38: value16
      key14: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value30
          key34: value1
          key0: value13
      podSelector:
        matchLabels:
          key37: value26
